--- a/FinalMOCK/app/src/main/res/layout/activity_home.xml
+++ b/FinalMOCK/app/src/main/res/layout/activity_home.xml
@@ -10,6 +10,7 @@
         android:id="@+id/img_home"
         android:layout_width="match_parent"
         android:layout_height="300dp"
+        android:layout_marginTop="80dp"
         android:src="@drawable/splash_screen" />
 
     <androidx.appcompat.widget.AppCompatButton
@@ -25,7 +26,7 @@
         android:background="@drawable/btn_signup"
 
         android:layout_below="@id/img_home"
-        android:layout_marginTop="20dp"/>
+        android:layout_marginTop="250dp"/>
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_sign_out"
