--- a/FinalMOCK/app/src/main/res/layout/activity_reset.xml
+++ b/FinalMOCK/app/src/main/res/layout/activity_reset.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SignUpActivity">
+    android:background="@color/background"
+    tools:context=".ResetActivity">
 
     <LinearLayout
         android:id="@+id/quiz_layout"
@@ -36,21 +37,22 @@
     </LinearLayout>
 
     <ImageView
-        android:id="@+id/img_sign_up"
+        android:id="@+id/img_reset"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
         android:layout_below="@id/quiz_layout"
-        app:srcCompat="@drawable/sign_up"
-        />
+        android:layout_marginTop="100dp"
+
+        android:src="@drawable/icon_reset"
+        android:layout_centerHorizontal="true"/>
 
     <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/sign_up_email"
+        android:id="@+id/input_layout_email"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
+        android:layout_below="@id/img_reset"
         android:layout_centerHorizontal="true"
-        android:layout_below="@id/img_sign_up"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="50dp"
 
         android:hint="@string/email"
         app:startIconDrawable="@drawable/icon_email"
@@ -65,47 +67,22 @@
             android:inputType="textEmailAddress"
 
             android:padding="15dp"
+            android:textColor="@color/black"
             android:textSize="15dp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/sign_up_password"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/sign_up_email"
-        android:layout_marginTop="15dp"
-
-        android:hint="@string/password"
-        app:startIconDrawable="@drawable/icon_lock"
-        app:endIconMode="password_toggle"
-        app:boxStrokeColor="@color/black">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edt_password"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textSize="15dp"
-            android:drawablePadding="15dp"
-            android:drawableRight="@drawable/icon_eye"
-            android:inputType="textPassword"
-
-            android:padding="15dp" />
-    </com.google.android.material.textfield.TextInputLayout>
-
     <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/btn_sign_up"
+        android:id="@+id/btn_reset"
         android:layout_width="200dp"
         android:layout_height="40dp"
         android:layout_centerHorizontal="true"
 
-        android:layout_below="@id/sign_up_password"
-        android:layout_marginTop="230dp"
-        android:background="@drawable/btn_signup"
-        android:text="@string/signup"
-        android:textColor="@android:color/white"
-
+        android:text="@string/reset"
         android:textSize="17dp"
-        android:textStyle="bold" />
+        android:textColor="@color/background"
+        android:background="@drawable/btn_signin"
+
+        android:layout_below="@id/input_layout_email"
+        android:layout_marginTop="140dp"/>
 
 </RelativeLayout>
