--- a/FinalMOCK/app/src/main/res/layout/activity_reset.xml
+++ b/FinalMOCK/app/src/main/res/layout/activity_reset.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ResetActivity">
+    tools:context=".Controller.ResetActivity">
 
     <LinearLayout
         android:id="@+id/quiz_layout"
