--- a/FinalMOCK/app/src/main/res/layout/activity_congra_avtivity.xml
+++ b/FinalMOCK/app/src/main/res/layout/activity_congra_avtivity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".CongraAvtivity">
+    tools:context=".Controller.CongraAvtivity">
 
     <ImageView
         android:id="@+id/img_congra"
