--- a/FinalMOCK/app/src/main/res/layout/activity_create_data_acitvity.xml
+++ b/FinalMOCK/app/src/main/res/layout/activity_create_data_acitvity.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".CreateDataAcitvity">
+    tools:context=".Controller.CreateDataAcitvity">
 
     <EditText
         android:id="@+id/ques"
